# ROS---Robot-Operating-Systems

./: .gitignore  README.md
week1_exercise/: package.xml  setup.cfg
week1_exercise/launch/: temperature_system.launch.py  temperature_system_counter.launch.py
week1_exercise/week1_exercise/: temperature_monitor.py  temperature_monitor_counter.py  temperature_sensor.py
week2_exercise/: CMakeLists.txt  package.xml
week2_exercise/launch/: book_lookup.launch.py  book_lookup_extended.launch.py
week2_exercise/scripts/: book_client.py  book_server.py  book_server_extended.py
week2_exercise/srv/: BookLookup.srv
