[metadata]
name = week1_exercise
version = 0.0.0
description_file = README.rst

[options]
packages = find:
install_requires =
    rclpy
    std_msgs

[options.entry_points]
console_scripts =
    temperature_sensor = week1_exercise.temperature_sensor:main
    temperature_monitor = week1_exercise.temperature_monitor:main
    temperature_monitor_counter = week1_exercise.temperature_monitor_counter:main
