<?xml version="1.0"?>
<package format="3">
  <name>week2_exercise</name>
  <version>0.0.0</version>
  <description>Week2 exercise package</description>
  <maintainer email="iamsahilsartaj@gmail.com">Sahil</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
